[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spec"
description = 'A statically typed data structure validator with support for advance features.'
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Zomatree", email = "me@zomatree.live" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["typing_extensions>=4.4.0"]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/zomatree/spec#readme"
Issues = "https://github.com/zomatree/spec/issues"
Source = "https://github.com/zomatree/spec"

[tool.hatch.version]
path = "spec/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=spec --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["311"]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@overload"
]

[tool.pyright]
reportPrivateUsage = false
